<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_container_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    tools:ignore="UnusedAttribute">

    <ImageView
        android:id="@+id/iv_weather"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_100"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_toEndOf="@id/iv_weather"
        android:layout_toRightOf="@id/iv_weather"
        android:orientation="vertical"
        tools:ignore="RtlCompat">

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_4"
            android:text="@string/_day"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_description"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/margin_20"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap,RtlCompat">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_current_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_4"
                android:text="@string/current_temperature"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_28"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_current_temperature"
                android:text="@string/o"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                tools:ignore="ContentDescription,RtlHardcoded" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_min_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_temperature"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_min_temperature"
                android:text="@string/o"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold"
                tools:ignore="ContentDescription,RtlHardcoded" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_07"
        android:layout_below="@id/iv_weather"
        android:background="@android:color/darker_gray" />

</RelativeLayout>