<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_today_main"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_200"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_110"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:ignore="RtlCompat,UselessParent">

        <TextView
            android:id="@+id/tv_day_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_day"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap,RtlCompat">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_current_temperature_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_temperature"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_70"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6"
                    android:layout_toRightOf="@id/tv_current_temperature_main"
                    android:text="@string/o"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_24"
                    android:textStyle="bold"
                    tools:ignore="ContentDescription,RtlHardcoded" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/tv_min_temperature_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/min_temperature"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_28" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_min_temperature_main"
                    android:paddingBottom="@dimen/padding_8"
                    android:text="@string/o"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold"
                    tools:ignore="ContentDescription,RtlHardcoded" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_city_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/city"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_20"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap,RtlCompat,UseCompoundDrawables,UselessParent">

        <ImageView
            android:id="@+id/iv_weather_main"
            android:layout_width="@dimen/size_100"
            android:layout_height="@dimen/size_100"
            android:layout_marginTop="@dimen/margin_10"
            android:src="@drawable/ic_launcher_background"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_description_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_day"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_24" />

    </LinearLayout>

</RelativeLayout>