<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rv_today_main"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="RtlCompat,UselessParent">

            <TextView
                android:id="@+id/tv_day_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_day"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap,RtlCompat">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_current_temperature_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/current_temperature"
                        android:textColor="@android:color/white"
                        android:textSize="70sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/o"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="@android:color/white"
                        android:layout_toRightOf="@id/tv_current_temperature_main"
                        tools:ignore="ContentDescription,RtlHardcoded" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom">

                    <TextView
                        android:id="@+id/tv_min_temperature_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_temperature"
                        android:textSize="28sp"
                        android:gravity="bottom"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/o"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:paddingBottom="8dp"
                        android:textColor="@android:color/white"
                        android:layout_toRightOf="@id/tv_min_temperature_main"
                        tools:ignore="ContentDescription,RtlHardcoded" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_city_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="RelativeOverlap,RtlCompat,UseCompoundDrawables,UselessParent">

            <ImageView
                android:id="@+id/iv_weather_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_description_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_day"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/recycler_item" />

</LinearLayout>