<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DetailWeather">

    <include layout="@layout/layout_toolbar_secondary" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_day_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_day"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_24"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_date_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_day"
                    android:textSize="@dimen/text_size_22"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap,RtlCompat">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_current_temperature_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_4"
                            android:text="@string/current_temperature"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_120" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_6"
                            android:layout_toRightOf="@id/tv_current_temperature_detail"
                            android:text="@string/o"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_24"
                            android:textStyle="bold"
                            tools:ignore="ContentDescription,RtlHardcoded" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end">

                        <TextView
                            android:id="@+id/tv_min_temperature_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="bottom"
                            android:text="@string/min_temperature"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_36" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/tv_min_temperature_detail"
                            android:paddingBottom="@dimen/margin_8"
                            android:text="@string/o"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"
                            tools:ignore="ContentDescription,RtlHardcoded" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap,RtlCompat,UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/iv_weather_detail"
                        android:layout_width="@dimen/size_100"
                        android:layout_height="@dimen/size_100"
                        android:src="@drawable/ic_launcher_background"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_description_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:text="@string/_description"
                        android:textSize="@dimen/text_size_24" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textSize="@dimen/text_size_20" />

                        <TextView
                            android:id="@+id/tv_humidity_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_4"
                            android:layout_marginEnd="@dimen/margin_4"
                            android:text="@string/humidity"
                            android:textSize="@dimen/text_size_20" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textSize="@dimen/text_size_20" />

                        <TextView
                            android:id="@+id/tv_pressure_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_4"
                            android:layout_marginEnd="@dimen/margin_4"
                            android:text="@string/pressure"
                            android:textSize="@dimen/text_size_20" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textSize="@dimen/text_size_20" />

                        <TextView
                            android:id="@+id/tv_wind_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_4"
                            android:layout_marginEnd="@dimen/margin_4"
                            android:text="@string/wind"
                            android:textSize="@dimen/text_size_20" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textSize="@dimen/text_size_20" />

                        <TextView
                            android:id="@+id/tv_location_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_4"
                            android:layout_marginEnd="@dimen/margin_4"
                            android:text="@string/location"
                            android:textSize="@dimen/text_size_20" />

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="@dimen/size_120"
                    android:layout_height="@dimen/size_120"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/margin_16"
                    tools:ignore="RtlCompat">

                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                        android:id="@+id/cp_wind_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        app:cpb_background_progressbar_color="@color/colorPrimaryDark"
                        app:cpb_background_progressbar_width="@dimen/size_6"
                        app:cpb_progressbar_color="@color/colorAccent"
                        app:cpb_progressbar_width="@dimen/size_6" />

                    <TextView
                        android:id="@+id/tv_wind_progress_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/_3"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_46"
                        android:textStyle="bold" />

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>